testdata/invalid/orbit_missing.sol
orbit "does_not_exist.sol";
